# rustevalbot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: check.yml  release.yml
src/: bot.rs  bot_runner.rs  main.rs  utils.rs
src/cratesio/: mod.rs
src/eval/: execute.rs  mod.rs  parse.rs
