[package]
name = "telegram-rustevalbot"
version = "0.5.3"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/upsuper/telegram-rustevalbot"
edition = "2021"
publish = false

[dependencies]
combine = "4.0.1"
dotenv = "0.15.0"
env_logger = "0.11"
derive_more = { version = "1", features = ["from"] }
futures = "0.3.1"
htmlescape = "0.3"
itertools = "0.13"
log = "0.4"
parking_lot = "0.12"
phf = { version = "0.11.0", features = ["macros"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telegram_types = "0.7.0"
unicode-width = "0.2"
url = "2.1.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "sync", "time"]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.7"

[[bin]]
name = "rustevalbot"
path = "src/main.rs"
